# add-gitignore-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: generate_gitignore.rs  main.rs  search_gitignore.rs  utils.rs
src/generate_gitignore/: generate.rs
src/search_gitignore/: search.rs
